--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
-        "react-router-dom": "^6.23.0",
-        "react-spinners": "^0.13.8"
+        "react-spinners": "^0.13.8",
+        "reactjs-popup": "^2.0.6"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
